securely-modified/kubernetes-manifests/node.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: node
spec:
  replicas: 1
  selector:
    matchLabels:
      app: node
  template:
    metadata:
      labels:
        app: node
      annotations:
        container.apparmor.security.beta.kubernetes.io/node: runtime/default # replace runtime/default with your custom profile, e.g. localhost/deny-write etc.        
    spec:
      hostPID: false # Controls whether containers can share host process namespace
      hostIPC: false # Controls whether containers can share host process namespace
      hostNetwork: false # Controls whether containers can use the host network       
      containers:
        - name: node
          image: node-app-secure:v1
          resources:
            requests:
              memory: "64Mi"
              cpu: "250m"
            limits:
              memory: "128Mi"
              cpu: "500m"          
          volumeMounts:
            - name: secrets-volume
              mountPath: /etc/node-details
          ports:
            - containerPort: 3000
          securityContext:
            seccompProfile:
              type: RuntimeDefault # this seccomp profile provides a strong set of security defaults while preserving the functionality of the workload
            capabilities: # You should always drop all capabilities and only add those that your application needs to operate
              drop: # drop should always come before add
                - ALL       
            privileged: false # Controls whether pods can run privileged containers
            #runAsNonRoot: true # when running a distroless image and seccomp profile I've found that in this case I needed to disable it to get the container running
            readOnlyRootFilesystem: true # Requires the use of a read only root filesystem            
            allowPrivilegeEscalation: false # Restricts escalation to root privileges    
      volumes:
        - name: secrets-volume
          secret:
            secretName: node-secrets                        
---
apiVersion: v1
kind: Service
metadata:
  name: node
spec:
  selector:
    app: node
  ports:
    - port: 3000
      targetPort: 3000
